fix weird extra-margin bug on mobile

--- a/src/css/app2.less
+++ b/src/css/app2.less
@@ -79,6 +79,13 @@ body.waiting-for-angular div#initializing-panel {
   }
 }
 
+@media only screen and (max-width: @screen-xs-max) {
+  html {
+    width: 100%;
+    overflow-x: hidden;
+  }
+}
+
 body {
   background-color: white;
   font-family: @body-font;
